[workspace]
members = [
    "crates/resp-ast",
    "crates/resp-parser",
    "crates/resp-transpiler",
    "crates/resp-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Esperanto-keyword programming language that transpiles to Rust"
authors = ["SrDicov"]
license = "MIT"
repository = "https://github.com/SrDicov/Resp"
homepage = "https://github.com/SrDicov/Resp"
