[package]
name = "resp-cli"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
resp-parser = { path = "../resp-parser" }
resp-transpiler = { path = "../resp-transpiler" }
clap = { version = "4", features = ["derive"] }
